--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,9 +11,17 @@
         <header class="page-header">
             <div class="container">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu">
-                        ADD
-                    </a>
+                <a href="{% url 'post_new' %}" class="top-menu">
+                    ADD
+                </a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu">
+                    DRAFTS
+                </a>
+                <p id="logout" class="top-menu">Hello {{ user.username }} <small><a href="{% url 'logout' %}">(Log out)</a></small></p>
+                {% else %}
+                <a href="{% url 'login' %}" class="top-menu">
+                    LOGIN
+                </a>
                 {% endif %}
                 <h1><a href="/">Django Girls Blog</a></h1>
             </div>
@@ -21,8 +29,8 @@
         <main class="container">
             <div class="row">
                 <div class="col">
-                {% block content %}
-                {% endblock %}
+                    {% block content %}
+                    {% endblock %}
                 </div>
             </div>
         </main>
